// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon should allow the user to specify the direction 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <div
    className="custom-class bx--tooltip-icon"
  >
    <button
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--icon__top bx--tooltip--icon__align-center"
    >
      <svg />
    </button>
  </div>
</TooltipIcon>
`;

exports[`TooltipIcon should render 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <div
    className="custom-class bx--tooltip-icon"
  >
    <button
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--icon__bottom bx--tooltip--icon__align-center"
    >
      <svg />
    </button>
  </div>
</TooltipIcon>
`;
